--- a/DockerFile.txt
+++ b/DockerFile.txt
@@ -2,7 +2,7 @@ FROM php:8.2-apache
 
 RUN docker-php-ext-install mysqli
 
-COPY . /var/www/html/
+COPY public/ /var/www/html/
 
 RUN chmod -R 777 /var/www/html/uploads
 
