--- a/DockerFile
+++ b/DockerFile
@@ -1,8 +1,9 @@
 FROM php:8.2-apache
 
-COPY . /var/www/
-
-RUN sed -i 's|DocumentRoot /var/www/public|DocumentRoot /var/www|' /etc/apache2/sites-available/000-default.conf
-
+RUN docker-php-ext-install mysqli
 RUN a2enmod rewrite
+
+COPY . /var/www/html/
+RUN chmod -R 777 /var/www/html/uploads
+
 EXPOSE 80
