--- a/DockerFile
+++ b/DockerFile
@@ -1,9 +1,19 @@
 FROM php:8.2-apache
 
+# Install mysqli extension
 RUN docker-php-ext-install mysqli
+
+# Enable mod_rewrite
 RUN a2enmod rewrite
 
+# Copy semua file ke root html Apache
 COPY . /var/www/html/
+
+# Set permission ke folder uploads
 RUN chmod -R 777 /var/www/html/uploads
 
+# Expose port 80
 EXPOSE 80
+
+# Jalankan Apache saat container start
+CMD ["apache2-foreground"]
