--- a/DockerFile.txt
+++ b/DockerFile.txt
@@ -3,7 +3,10 @@ FROM php:8.2-apache
 RUN docker-php-ext-install mysqli
 RUN a2enmod rewrite
 
+# Ubah Apache agar listen di port 8080 (Railway default)
+RUN sed -i 's/80/8080/g' /etc/apache2/ports.conf /etc/apache2/sites-enabled/000-default.conf
+
 COPY . /var/www/html/
 RUN chmod -R 777 /var/www/html/uploads
 
-EXPOSE 80
+EXPOSE 8080
